# hse-eco-bot

./: Cargo.toml  README.md
hse-eco-bot/: Cargo.toml  build.rs
hse-eco-bot-macros/: Cargo.toml
hse-eco-bot-macros/src/: format.rs  lib.rs  strings.rs
hse-eco-bot/src/: app.rs  bootstrap.sql  callback_query.rs  db.rs  dispatch.rs  feedback.rs  global_state.rs  invalid_action.rs  kb.rs  main.rs  media.rs  message.rs  message_format_error.rs  message_queue.rs  newsletter.rs  state.rs  strings.rs  tests.rs  types.rs  ui.rs  user.rs  user_error.rs  user_facing_error.rs  util.rs
hse-eco-bot/src/kb/: command.rs  providers.rs
hse-eco-bot/src/kb/providers/: archive.rs  db.rs
hse-eco-bot/src/kb/providers/db/sql/: check_ancestors.sql  delete_dir_1.sql  delete_dir_2.sql
hse-eco-bot/src/newsletter/: archive.rs  feedback.rs
hse-eco-bot/src/tests/: db_provider.rs
hse-eco-bot/src/ui/: form.rs
kb/: Индекс качества воздуха
kb/Зелёная Вышка/: О проекте
kb/Переработка отходов/: Переработка
kb/Сортировка отходов/: Раздельный сбор мусора
kb/Сортировка отходов/Инструкция по сортировке/: Карта раздельного сбора отходов ВШЭ (Московский кампус)  Макулатура  Металл  Пакеты Tetra Pak  Пластик  Стекло
kb/Сортировка отходов/Инструкция по сортировке/Опасные отходы/: Батарейки  Люминесцентные лампы
resources/: strings.yml
scripts/: install.py
