[package]
name = "hse-eco-bot-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.42"
quote = "1.0.20"
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.1"
