[package]
name = "hse-eco-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10.0", features = ["throttle"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
hse-eco-bot-macros = { path = "../hse-eco-bot-macros" }
regex = "1.6.0"
lazy_static = "1.4.0"
rusqlite = "0.28.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
chrono = "0.4.22"
sqlite = "3.41.0"


